--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  .image-delete-btn{
+  .image-delete-btn {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -23,10 +23,10 @@
     height: 30px;
     box-shadow: none;
     padding: 0;
-    .icon, .gcicon{
+    .icon, .gcicon {
       margin: 0;
     }
-    &:hover{
+    &:hover {
       color: $white;
       background: $red;
       border-color: $red;
@@ -35,10 +35,10 @@
 }
 
 
-.upload-preview-container{
+.upload-preview-container {
   padding-top: 60%;
   margin: 0;
-  .upload-preview-inner{
+  .upload-preview-inner {
 		position: absolute;
     top: 0;
     left: 0;
@@ -51,9 +51,9 @@
     justify-content: center;
     background-color: $grey-6;
     border-radius: $radius;
-    .upload-overlay{
+    .upload-overlay {
       text-align: center;
-      span{
+      span {
         display: none !important;
         visibility: visible !important;
         color: $white;
@@ -61,19 +61,19 @@
         font-weight: 600;
         margin-bottom: 15px;
       }
-      .btn-primary{
+      .btn-primary {
         background: transparent;
         box-shadow: none;
         border: 1px solid $white;
         color: $white;
-        &:hover{
+        &:hover {
           background: $white;
           color: $primary-color;
         }
       }
     }
 	}
-  .file-preview{
+  .file-preview {
     border-radius: $radius;
     display: block;
     position: absolute;
@@ -84,21 +84,21 @@
     margin: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.5;
+    opacity: .5;
     background-size: cover !important;
     background-position: center center;
   }
 }
 
-.upload-circle{
+.upload-circle {
   margin: 0 auto;
   max-width: 300px;
-  .upload-preview-container{
+  .upload-preview-container {
     padding-top: 100%;
-    .upload-preview-inner{
+    .upload-preview-inner {
       border-radius: 50%;
     }
-    .file-preview{
+    .file-preview {
       border-radius: 50%;
     }
   }
@@ -125,7 +125,7 @@
 	padding: 0;
 	z-index: 998;
 	margin-bottom: 0;
-	background-color: rgba(0,0,0,0.4) !important;
+	background-color: rgba(0,0,0,.4) !important;
 }
 .progress-bar {
   display: block;
@@ -159,7 +159,7 @@
 			right: 0;
 		}
 	}
-	&.bottom{
+	&.bottom {
 		.upload-preview-container {
 			bottom: 0;
 			padding-top: 35px;
