fix color on the 'new-page' button

--- a/app/assets/stylesheets/glass/partials/layout/_pages.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_pages.scss
@@ -105,8 +105,8 @@
             display: block;
             .circle-icon {
               border-color: $primary-color;
-                &:link {
-              color: $primary-color;
+              &:link, &:visited {
+                color: $primary-color;
               }
               &:hover {
                 color: $white;
