--- a/app/views/glass/_datepicker.html.erb
+++ b/app/views/glass/_datepicker.html.erb
@@ -62,7 +62,7 @@
         <% end %>
     </button>
     <% elsif show_time_field %>
-      <div class='form-group available_time_field time_field'>
+      <div class='form-group datepicker_time_field'>
         <input type="text" name="<%= "#{(record.class.name.demodulize).underscore}[#{time_field_name.to_sym}][time]" %>" class="form-control time-only inline" value="<%= has_datetime ? dt_object.strftime('%-l:%M %p') : '' %>" placeholder="HH:MM PM"/>
       </div>
     <% end %>
