--- a/app/views/glass/_datepicker.html.erb
+++ b/app/views/glass/_datepicker.html.erb
@@ -10,7 +10,7 @@
                                 default: true
   show_time         (optional): Set to false if the time portion of the dp should not be shown.
                                 default: true
-  instructions_msg  (optional): The message that should be displayed at the top of the dp.
+  instructions_text  (optional): The message that should be displayed at the top of the dp.
                                 default: 'Choose a prefered time and we will call you as close to that time as possible.'
   button_text       (optional): Text that should show in the button that opens the datepicker
                                 default: ' Choose a time'
@@ -63,8 +63,8 @@
   <div id="<%= class_container_selector %>" class="datepicker-container has-time-field<%= show_time_field && !(show_date_field) ? ' time-only' : '' %>">
     <div class="datepicker-wrapper <%= anytime ? 'fluid' : 'lg' %> left">
       <button class="close-btn close-dp"><i class="icon icon-cancel"></i></button>
-      <% if defined?(instructions_msg) %>
-        <p><%= instructions_msg %></p>
+      <% if defined?(instructions_text) %>
+        <p><%= instructions_text %></p>
       <% end %>
       <div class="datepicker-fields">
         <% if show_date_field %>
