--- a/app/views/glass/_datepicker.html.erb
+++ b/app/views/glass/_datepicker.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="form-group available_time_field time_field hidden">
         <label>Time</label>
-        <input type="text" placeholder="HH:MM PM" class="form-control time-only inline">
+        <input type="text" placeholder="HH:MM PM" class="form-control time-only format-as-time inline">
       </div>
     </div>
     <div class="form-group">
