--- a/app/views/glass/_datepicker.html.erb
+++ b/app/views/glass/_datepicker.html.erb
@@ -1,5 +1,5 @@
 <div class="datepicker-container has-time-field">
-  <div class="datepicker-wrapper lg left">
+  <div class="datepicker-wrapper lg left" data-initial-date="<%= DateTime.current.iso8601 %>">
     <button class="close-btn close-dp"><i class="icon icon-cancel"></i></button>
     <% if defined?(instructions_text) %>
       <p><%= instructions_text %></p>
