--- a/app/views/glass/_datepicker.html.erb
+++ b/app/views/glass/_datepicker.html.erb
@@ -21,6 +21,6 @@
         </div>
       </div>
     </div>
-    <button class="btn btn-primary pull-right close-dp" type="button">Save</button>
+    <button class="btn btn-primary pull-right close-dp" type="button">OK</button>
   </div>
 </div>
